# 0x402-pubsub

./: .agent-store.json  .env.example  .env.local  .env.local.bak  .env.template  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  mdx-components.tsx  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  supabase-schema.sql  tailwind.config.ts
.github/workflows/: ci.yml
agents-sdk/: .env.template  Cargo.toml
agents-sdk/arbitrage_tracker/: .env.template  Cargo.toml
agents-sdk/arbitrage_tracker/src/: config.rs  detector.rs  executor.rs  main.rs
agents-sdk/common/: Cargo.toml
agents-sdk/common/src/: config.rs  horizon.rs  lib.rs  pubsub.rs  stellar_tx.rs  wallet.rs
agents-sdk/liquidity_slippage_tracker/: .env.template
agents-sdk/mempool_monitor/: .env.template  Cargo.toml
agents-sdk/mempool_monitor/src/: alerts.rs  config.rs  main.rs  monitor.rs
agents-sdk/mev_bot/: .env.template  Cargo.toml
agents-sdk/mev_bot/src/: config.rs  executor.rs  main.rs  strategy.rs
agents-sdk/relayer/: .env.template  Cargo.toml
agents-sdk/templates/python/: README.md  arbitrage_tracker_agent.py  base_agent.py  liquidity_tracker_agent.py  mempool_monitor_agent.py  mev_bot_agent.py  relayer_agent.py  requirements.txt  trading_bot_agent.py
agents-sdk/trading_bot/: .env.template  Cargo.toml
agents-sdk/trading_bot/src/: config.rs  main.rs  orders.rs  strategy.rs
app/: globals.css  layout.tsx  page.tsx
app/about/: page.tsx
app/agents/: page.tsx
app/agents/[id]/: page.tsx
app/api/agents/[id]/: route.ts
app/api/agents/[id]/run/: route.ts
app/api/agents/compose/: route.ts
app/api/agents/confirm-deploy/: route.ts
app/api/agents/create/: route.ts
app/api/agents/list/: route.ts
app/api/agents/submit-confirmation/: route.ts
app/api/agents/validate-deploy/: route.ts
app/api/consumers/[topic]/: route.ts
app/api/dashboard/analytics/: route.ts
app/api/dashboard/requests/: route.ts
app/api/faucet/claim/: route.ts
app/api/faucet/claims/: route.ts
app/api/payment/verify/: route.ts
app/dashboard/: page.tsx
app/devs/: page.mdx  page.tsx
app/docs/: page.mdx  page.tsx
app/faucet/: page.tsx
app/marketplace/: page.tsx
app/trading/: page.tsx
app/workflow/: page.tsx
cli/: index.ts
components/: AblyNotifications.tsx  AgentBuilder.tsx  AgentCard.tsx  AppShell.tsx  CandlestickChart.tsx  HeroScene.tsx  LiveFeed.tsx  Navbar.tsx  PaymentModal.tsx  ProtocolFlow.tsx  Sidebar.tsx  TerminalOutput.tsx  WalletConnect.tsx
components/docs/: BackboneDiagram.tsx  PaymentWorkflowDiagram.tsx
consumers/: a2a-router.ts  agent-executor.ts  billing-aggregator.ts  chain-syncer.ts  index.ts  marketplace-feed.ts  payment-verifier.ts
contracts/: deploy-soroban.sh  deploy.sh
contracts/af_token/: Cargo.toml  deploy.sh
contracts/af_token/src/: lib.rs
contracts/agent_registry/: Cargo.toml
contracts/agent_registry/src/: lib.rs
contracts/agent_validator/: Cargo.toml
contracts/agent_validator/src/: lib.rs
docs/: cli.md
docs/architecture/: Architechture.md
hooks/: useMarketplaceFeed.ts
lib/: anthropic.ts  demo-agents.ts  openai.ts  qstash.ts  soroban-deployment.ts  stellar.ts
my-agent/workflows/: default.json
types/: events.ts  index.ts
